tests/integration/snapshots/formatter/test_fmt_syntax_error.stderr.txt
error[C001]: syntax error: unexpected `{`. Expected: ;, ->, :, |, asm, const, enum, fun, ….
  --> contracts/broken[LINE]
  |
1 | fun broken {
  |            ^

Error: Failed to format 1 file due to syntax error
